# Changelog:

## v0.7.0
* Message Window is canceled if the system usage is over thresholds
* Exception processes just use the process name and not the whole path
* Added minimum of 15 sec for the waittime
* Portable does not download the new installer anymore but refers to the website


## v0.6.0
 * New GUI setup:
	* MetroTiles on Start
	* New metroTile that shows the standby activation status
	* New options:
		* Specify standby mode
		* Enable / Disable logging
		* Start standby at specified time
	* Added information
	* Updated "About Tab"
	* Deleted "onTop" Setting (not necessary)
 * Changed license to GNU GENERAL PUBLIC LICENSE Version 3
 * Fixed Bugs:
	* Fixed steadily increasing memory consumption
	* Fixed missing dlls in portable version (C++ Runtime is not longer required) (.NET Framework is still required)
 * Improved Code:
	* Reduced memory consumption (delayed loading of components) from 15-20MB to 5 MB
	* Reduced CPU consumption from 2-3% average to nearly 0%
	* Reduced size of executable
	* Fixed memory leaks
 * Small Changes:
	* Auto-Start activating on first launch
	* Now Removing Downloadfiles after installing
	* Re-structered code
 

## v0.5.7
 * Added compatibility for old settings
 * Fixed Multi-User Bug (StandBye has started standbye although multiple users are logged in)
 * Fixed settingsfile location on portable version
 * Added full Multi-Language Support
 * Added Language: Deutsch
 * Fixed Resouce-File locations
 * Reduced size of executable
 * Fixed message window buttons
 * Fixed Downloader and added support for different download links
 * Small GUI corrections


## v0.5.2
* Added installer meta-data
* Added single instance application support
* Added cross instance messaging to open the SettingsForm when another instance is launched
* Updated MetroForm and added features and tooltips
* Extended Logsystem
* Application temporary disables the windows standby while StandBye is running
* Added Copyright notes in all files